@@ -1,5 +1,13 @@
 2005-02-18  Richard Hult  <richard@imendio.com>
 
+	* src/planner-task-tree.c: (task_tree_duration_data_func): Make
+	the duration column only editable for fixed duration tasks.
+
+	* src/planner-task-view.c: (get_widget): Add duration column to
+	the task view. Fixes bug #151761.
+
+	* src/planner-task-view.c: Fix typo in critical path menu item.
+
 	* libplanner/mrp-old-xml.c (old_xml_read_task): Silently correct
 	milestone tasks with children to normal tasks. Fixes bug #166424.
  
